<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarContaFin"
    android:background="@drawable/criarcontafin_gradient">


    <ImageView
        android:id="@+id/imageViewWallet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/wallet_animated"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="90dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/img_logoutCriarContaFin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_exit_to_app_black_24dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/bg_criarcontafin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="50dp">


        <EditText
            android:id="@+id/txt_designacao"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/txt_criarcontafin_design"
            android:drawableRight="@drawable/ic_edit_black_24dp"
            android:ems="10"
            android:hint="@string/DesignacaoConta"
            android:inputType="textPersonName"
            android:elevation="4dp"/>

        <EditText
            android:id="@+id/txt_saldo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/txt_criarcontafin_design"
            android:drawableRight="@drawable/ic_euro_symbol_black_24dp"
            android:ems="10"
            android:hint="@string/Saldo"
            android:inputType="numberDecimal"
            android:elevation="4dp"/>

        <Button
            android:id="@+id/btn_adicionar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/gradient2"
            android:textColor="@color/WhiteColor"
            android:textStyle="bold"
            android:text="@string/Adicionar"
            android:textSize="20dp"
            android:elevation="4dp"
            android:layout_marginBottom="50dp"/>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>