<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegDespesa"
    android:id="@+id/mainLayout"
    android:background="@drawable/gradient_regdesp">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/expensesn_no_bg"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/bg_criarcontafin"
        android:elevation="50dp"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/et_designaçãoDespesa"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/txt_criarcontafin_design"
            android:drawableRight="@drawable/ic_mode_edit_black_24dp"
            android:elevation="4dp"
            android:ems="10"
            android:hint="Designacão"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_valor"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/txt_criarcontafin_design"
            android:drawableRight="@drawable/ic_euro_symbol_black_24dp"
            android:elevation="4dp"
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spn_categoria"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/txt_criarcontafin_design"
            android:elevation="4dp" />

        <TextView
            android:id="@+id/txt_data"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="42dp"
            android:background="@drawable/txt_criarcontafin_design"
            android:drawableRight="@drawable/ic_date_range_black_24dp"
            android:elevation="4dp"
            android:gravity="center"
            android:hint="@string/selData"
            android:textAlignment="center"
            android:textSize="20dp" />


        <Button
            android:id="@+id/btn_registarDespesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/gradient2"
            android:elevation="4dp"
            android:text="@string/registar"
            android:textColor="@color/WhiteColor"
            android:textSize="25dp"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>